--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <section id="intro">
 <div class="two-column-grid">
 <div>
-<p>Welcome to Saskatchewan Inn, your comprehensive informational resource for understanding Saskatoon hotel accommodations and planning your stay in one of Canada's most vibrant prairie cities. This guide is designed to help travelers navigate the diverse landscape of saskatoon canada hotels, from boutique properties to full-service establishments, by providing detailed information about room types, amenities, rates, and booking considerations.</p>
+<p>Welcome to Saskatchewan Inn, your comprehensive informational resource for understanding Saskatoon hotel accommodations and planning your stay in one of Canada's most vibrant prairie cities. This guide is designed to help travelers navigate the diverse landscape of saskatoon canada hotels, from boutique properties to full-service establishments, by providing detailed information about room types, amenities, rates, and booking considerations. For convenient access to various services, you can also check the <a href="https://orbits-spins.ca/">Orbit Spins Login</a> page for more details.</p>
 
 <p>Whether you're visiting Saskatoon for business, leisure, or a special event, understanding your lodging options is essential for a successful trip. The saskatchewan inn landscape offers a wide range of choices, each with distinct features, locations, and price points. Our guide breaks down these options systematically, helping you compare saskatoon hotel accommodations based on your specific needs, budget, and travel dates.</p>
 
